WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303092
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-empty-004.xht
https://bugs.webkit.org/show_bug.cgi?id=303092
Summary
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/b...
alan
Reported
2025-11-25 06:04:40 PST
ssia
Attachments
Patch
(5.68 KB, patch)
2025-11-25 06:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.67 KB, patch)
2025-11-25 06:13 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.72 KB, patch)
2025-11-25 08:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-25 06:09:06 PST
Created
attachment 477512
[details]
Patch
alan
Comment 2
2025-11-25 06:13:37 PST
Created
attachment 477513
[details]
Patch
alan
Comment 3
2025-11-25 08:05:10 PST
Created
attachment 477514
[details]
[fast-cq]Patch
EWS
Comment 4
2025-11-25 09:58:44 PST
Committed
303546@main
(102a44abed0f): <
https://commits.webkit.org/303546@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477514
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-11-25 09:59:13 PST
<
rdar://problem/165405316
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug