[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-empty-004.xht https://bugs.webkit.org/show_bug.cgi?id=303092

Reviewed by Antti Koivisto.

See comment in computedVisualOrder.

Test: fast/inline/blocks-in-inline-layout-with-rtl-direction1.html

* LayoutTests/fast/inline/blocks-in-inline-layout-with-rtl-direction1-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-with-rtl-direction1.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::computedVisualOrder):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

Canonical link: https://commits.webkit.org/303546@main